# py-home-music-downloader

./: .gitignore  README.md  config.json  pull_from_source_write_to_target.py  pyproject.toml  requirements.txt  setup.py
py_home_music_downloader/: convert_m4a_to_mp3.py  convert_mp4_to_mp3.py  dict_utils.py  download_youtube_link_audio.py  folder_metadata_update.py  get_all_files_of_file_type.py  incomplete.txt  main.py  main_folder_metadata_update.py  old_list.txt  old_list2.txt  os_utils.py  pkl_utils.py  pydpzpath.py  read_url.py  string_utils.py  update_metadata.py  update_music_file_naming.py  utils_path.py  utils_pkl.py  video_list.txt  video_list_old.txt  vlc_utils.py
tests/: test_convert_m4a_to_mp3.py  test_dotenv_retreival.py  test_example.py  test_get_music_details.py  test_json_return_from_songs.py  test_load_pkl.py  test_music_file_naming.py  test_os_utils.py  test_path_utils.py  test_string_utils.py  test_title_to_album_name.py  test_update_metadata.py  test_vlc_utils.py
